Fixed footer position on IE 11
Stupid IE

--- a/_sass/site/_base.scss
+++ b/_sass/site/_base.scss
@@ -48,7 +48,7 @@ ul, ol, dl, figure,
  */
 main {
   display: block; /* Default value of `display` of `main` element is 'inline' in IE 11. */
-  flex: 1;
+  flex: 1 0 auto; /* All values needed for IE 11 */
 }
 
 
